HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeReleaseMode/Expected.uv
//! Expected diagnostic metadata for the SpeculativeReleaseMode rejected-source specimen.

expectedDiagnostic("E-CON-0094", "rule.19.K-Spec-No-Release")
